tests/toy/neg/000250_mutation.toylang
program a = { bool a = a; } .
